--- a/Index.html
+++ b/Index.html
@@ -14,53 +14,13 @@
   <nav id="desktop-nav">
     <div class="logo">Our Portfolio</div>
     <ul class="nav-links">
-      <li><a href="#experience">Experience</a></li>
       <li><a href="#video-edits">Our Work</a></li>
+      <li><a href="#experience">Experience</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
-  <!-- EXPERIENCE -->
-  <section id="experience">
-    <p class="section__text__p1">Explore Our</p>
-    <h1 class="title">Experience</h1>
-
-    <div class="experience-details-container">
-      <div class="about-containers">
-        <div class="details-container">
-          <h2>Filmmaking</h2>
-          <article><img src="Assets/checkmark.png" class="icon" />Storytelling</article>
-          <article><img src="Assets/checkmark.png" class="icon" />Cinematography</article>
-          <article><img src="Assets/checkmark.png" class="icon" />Lighting</article>
-          <article><img src="Assets/checkmark.png" class="icon" />Directing</article>
-        </div>
-
-        <div class="details-container">
-          <h2>Video Editing</h2>
-          <article><img src="Assets/checkmark.png" class="icon" />Premiere Pro</article>
-          <article><img src="Assets/checkmark.png" class="icon" />After Effects</article>
-          <article><img src="Assets/checkmark.png" class="icon" />DaVinci Resolve</article>
-          <article><img src="Assets/checkmark.png" class="icon" />Motion Graphics</article>
-        </div>
-
-        <!-- NEW EDUCATION BOX -->
-        <div class="details-container">
-          <h2>Education</h2>
-          <div class="education-item">
-            <h3>Master's Degree in Psychology</h3>
-            <p>Specialized in consumer behavior & media psychology</p>
-          </div>
-          <div class="education-item">
-            <h3>Master's Degree in Marketing Management</h3>
-            <p>Focused on digital marketing & brand strategy</p>
-          </div>
-          <p class="education-note">Combining psychological insight with creative storytelling</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- VIDEO EDITS SECTION -->
+  <!-- VIDEO EDITS SECTION (NOW FIRST) -->
   <section id="video-edits">
     <p class="section__text__p1">Our Work</p>
     <h1 class="title">Video Portfolio</h1>
@@ -117,7 +77,7 @@
         </a>
       </div>
 
-      <!-- Video 3 - Filmmaking, Long Form -->
+      <!-- Video 3 - Video Editing, Long Form -->
       <div class="video-card" data-type="video-editing" data-format="long">
         <a href="https://www.youtube.com/watch?v=nD58KXqFtDI" target="_blank" class="video-link">
           <div class="video-thumbnail">
@@ -205,6 +165,46 @@
             <div class="play-icon">▶</div>
           </div>
         </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- EXPERIENCE SECTION (NOW AFTER VIDEO PORTFOLIO) -->
+  <section id="experience">
+    <p class="section__text__p1">Explore Our</p>
+    <h1 class="title">Experience</h1>
+
+    <div class="experience-details-container">
+      <div class="about-containers">
+        <div class="details-container">
+          <h2>Filmmaking</h2>
+          <article><img src="Assets/checkmark.png" class="icon" />Storytelling</article>
+          <article><img src="Assets/checkmark.png" class="icon" />Cinematography</article>
+          <article><img src="Assets/checkmark.png" class="icon" />Lighting</article>
+          <article><img src="Assets/checkmark.png" class="icon" />Directing</article>
+        </div>
+
+        <div class="details-container">
+          <h2>Video Editing</h2>
+          <article><img src="Assets/checkmark.png" class="icon" />Premiere Pro</article>
+          <article><img src="Assets/checkmark.png" class="icon" />After Effects</article>
+          <article><img src="Assets/checkmark.png" class="icon" />DaVinci Resolve</article>
+          <article><img src="Assets/checkmark.png" class="icon" />Motion Graphics</article>
+        </div>
+
+        <!-- NEW EDUCATION BOX -->
+        <div class="details-container">
+          <h2>Education</h2>
+          <div class="education-item">
+            <h3>Master's Degree in Psychology</h3>
+            <p>Specialized in consumer behavior & media psychology</p>
+          </div>
+          <div class="education-item">
+            <h3>Master's Degree in Marketing Management</h3>
+            <p>Focused on digital marketing & brand strategy</p>
+          </div>
+          <p class="education-note">Combining psychological insight with creative storytelling</p>
+        </div>
       </div>
     </div>
   </section>
