--- a/Index.html
+++ b/Index.html
@@ -166,6 +166,23 @@
           </div>
         </a>
       </div>
+         <!-- Video 8 - Video Editing, Long Form -->
+      <div class="video-card" data-type="filmmaking" data-format="short">
+        <a href="https://www.instagram.com/reel/DNixnewq2dr/" target="_blank" class="video-link">
+          <div class="video-thumbnail">
+            <img src="Assets/Can food.jpeg" alt="CanFood food contest" />
+            <div class="video-overlay">
+              <div class="video-title">Video AD for GomyCode</div>
+              <div class="video-meta">
+                <span class="video-type">Filmmaking</span>
+                <span class="video-format">Short Form</span>
+                <span class="video-views">5k Views</span>
+              </div>
+            </div>
+            <div class="play-icon">▶</div>
+          </div>
+        </a>
+      </div>
     </div>
   </section>
 
