--- a/Index.html
+++ b/Index.html
@@ -170,7 +170,7 @@
       <div class="video-card" data-type="filmmaking" data-format="short">
         <a href="https://www.instagram.com/reel/DNixnewq2dr/" target="_blank" class="video-link">
           <div class="video-thumbnail">
-            <img src="Assets/GOMYCODE.jpeg" alt="CanFood food contest" />
+            <img src="Assets/GOMYCODE.png" alt="CanFood food contest" />
             <div class="video-overlay">
               <div class="video-title">Video AD for GomyCode</div>
               <div class="video-meta">
