--- a/Index.html
+++ b/Index.html
@@ -187,9 +187,9 @@
       <div class="video-card" data-type="filmmaking" data-format="short">
         <a href="https://www.instagram.com/p/DOrD5KBiLF6/" target="_blank" class="video-link">
           <div class="video-thumbnail">
-            <img src="Assets/GOMYCODE.png" alt="CanFood food contest" />
+            <img src="Assets/Comsinus.png" alt="CanFood food contest" />
             <div class="video-overlay">
-              <div class="video-title">Kinesitherapy Session With Sports Team</div>
+              <div class="video-title">(feat Comsinus)Kinesitherapy Session With Sports Team</div>
               <div class="video-meta">
                 <span class="video-type">Filmmaking</span>
                 <span class="video-format">Short Form</span>
