--- a/Index.html
+++ b/Index.html
@@ -131,23 +131,23 @@
         </a>
       </div>
 
-      <!-- Video 6 - Filmmaking, Long Form -->
-      <div class="video-card" data-type="filmmaking" data-format="long">
-        <a href="https://www.instagram.com/p/DF-hQnIKEDk" target="_blank" class="video-link">
-          <div class="video-thumbnail">
-            <img src="Assets/dakhama.jpeg" alt="Podcast interviews with local celebrities" />
-            <div class="video-overlay">
-              <div class="video-title">Podcast interviews with local celebrities</div>
-              <div class="video-meta">
-                <span class="video-type">Filmmaking</span>
-                <span class="video-format">Long Form</span>
-                <span class="video-views">151K Views</span>
-              </div>
-            </div>
-            <div class="play-icon">▶</div>
-          </div>
-        </a>
+<!-- Video 6 - BOTH Filmmaking AND Video Editing, Long Form -->
+<div class="video-card" data-type="filmmaking video-editing" data-format="long">
+  <a href="https://www.instagram.com/p/DF-hQnIKEDk" target="_blank" class="video-link">
+    <div class="video-thumbnail">
+      <img src="Assets/dakhama.jpeg" alt="Podcast interviews with local celebrities" />
+      <div class="video-overlay">
+        <div class="video-title">Podcast interviews with local celebrities</div>
+        <div class="video-meta">
+          <span class="video-type">Filmmaking + Editing</span>
+          <span class="video-format">Long Form</span>
+          <span class="video-views">151K Views</span>
+        </div>
       </div>
+      <div class="play-icon">▶</div>
+    </div>
+  </a>
+</div>
 
       <!-- Video 7 - Video Editing, Long Form -->
       <div class="video-card" data-type="video-editing" data-format="long">
