--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
             <div class="video-overlay">
               <div class="video-title">Portrait talking head interview</div>
               <div class="video-meta">
-                <span class="video-type">Filmmaking</span>
+                <span class="video-type">Filmmaking + Editing</span>
                 <span class="video-format">Long Form</span>
                 <span class="video-views">771K Views</span>
               </div>
@@ -67,7 +67,7 @@
             <div class="video-overlay">
               <div class="video-title">A local historical café & restaurant</div>
               <div class="video-meta">
-                <span class="video-type">Filmmaking</span>
+                <span class="video-type">Filmmaking + Editing</span>
                 <span class="video-format">Long Form</span>
                 <span class="video-views">221K Views</span>
               </div>
@@ -121,7 +121,7 @@
             <div class="video-overlay">
               <div class="video-title">Macbook M1 Pro Ad</div>
               <div class="video-meta">
-                <span class="video-type">Video Editing</span>
+                <span class="video-type">Filmmaking + Editing</span>
                 <span class="video-format">Advertisement</span>
                 <span class="video-views">Personal Work</span>
               </div>
