--- a/Index.html
+++ b/Index.html
@@ -30,6 +30,7 @@
       <button class="type-filter-btn active" data-type-filter="all">All Work</button>
       <button class="type-filter-btn" data-type-filter="video-editing">Video Editing</button>
       <button class="type-filter-btn" data-type-filter="filmmaking">Filmmaking</button>
+      <button class="type-filter-btn" data-type-filter="Other">Other</button>
     </div>
     
     <!-- FORMAT FILTER (Short Form / Long Form / Other) -->
@@ -121,7 +122,7 @@
             <div class="video-overlay">
               <div class="video-title">Macbook M1 Pro Ad</div>
               <div class="video-meta">
-                <span class="video-type">Filmmaking + Editing</span>
+                <span class="video-type">Filmmaking + Editing + Other</span>
                 <span class="video-format">Advertisement</span>
                 <span class="video-views">Personal Work</span>
               </div>
